[Lexer] Treat comments as whitespace for operator arity rules.

Previously, comments were treated as non-whitespace. Operators
also checked for right-boundedness before detecting comments
which start in the middle of an operator.

This resolves both of these issues so that comments are
consistently treated as whitespace when determining whether
operators are left- or right-bound.

Fixes SR-186 and SR-960 (SE-0037)